cluster/apps/mail/network-policy.yaml
  
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mail-namespace
  namespace: mail
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from K8S
    - ipBlock:
        cidr: 172.16.0.0/12
  egress:
  - to:
    # Only allow egress to K8S
    - ipBlock:
        cidr: 172.16.0.0/12
  policyTypes:
  - Ingress
  - Egress
